5-hpa-operator/app/k8s/deployment.yaml
---
# Deployment
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: shopping-matrix
  labels:    
    app: "shopping-matrix"
spec:
  replicas: 1
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: "shopping-matrix"
    spec:
      volumes:
      - name: config-volume
        configMap:
          name: shopping-matrix
        items:
        - key: application.properties
          path: application.properties
      containers:
      - name: "shopping-matrix"
        image: "fabiogomezdiaz/shopping-matrix:latest"
        imagePullPolicy: "Always"
        volumeMounts:
        - name: config-volume
          mountPath: /etc/config
        ports:
        - containerPort: 8080
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 25 #3
          periodSeconds: 2
          failureThreshold: 3
        livenessProbe:
          httpGet:
            path: /actuator/health
            port: 8080
          initialDelaySeconds: 30 #5
          periodSeconds: 5
          failureThreshold: 3
        resources:
          limits:
            memory: 200Mi
            cpu: "500m"
          requests:
            memory: 120Mi
            cpu: "250m"
---
# Route
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: "shopping-matrix"
  labels:
    app: "shopping-matrix"
spec:
  to:
    kind: Service
    name: "shopping-matrix"
---
# Service
apiVersion: v1
kind: Service
metadata:
  name: "shopping-matrix"
  labels:
    app: "shopping-matrix"
spec:
  type: ClusterIP
  ports:
  - name: http
    protocol: TCP
    port: 8080
    targetPort: 8080
  selector:
    app: "shopping-matrix"
